added a offer section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,34 @@
             </div>
         </div>
 
+        <div class="deals">
+            <h3 class=" title noto-serif"><span class="text-color">Latest </span> Deals</h3>
+            <p class="deals-dis inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </div>
+
+        <section class="offer-section">
+           <div class="offer">
+                <div class="promo-card small" style="background-image: url('assets/deal-bloom.png');">
+                    <div class="offer-content">
+                        <h2>60% Off | Bloom Plant</h2>
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
+                <div class="promo-card small" style="background-image: url('assets/deal-ana.png');">
+                        <div class="offer-content">
+                        <h2>30% Off | Ana Plant</h2>
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
+                <div class="promo-card large" style="background-image: url('assets/deal-zabo.png');">
+                    <div class="offer-content">
+                        <h2 class="offer-title inter">25% Off | Zabo Plant</h2>
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
