added footer section

--- a/index.html
+++ b/index.html
@@ -129,7 +129,45 @@
         </section>
 
     </main>
-    <footer>
+
+    <section class="join">
+    <div class="join-us">
+      <h2 class="noto-serif">Join the colorful Bunch</h2>
+      <form>
+        <input type="email" placeholder="Write email" required />
+        <button class="btn" type="submit">Subscribe</button>
+      </form>
+    </div>
+  </section>
+    <footer class="footer">
+      <div class="footer-content">
+            <div class="footer-brand">
+                <img src="assets/logo.png">
+                <p class="footer-dis font-color inter">Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+            </div>
+            <div class="footer-links font-color inter">
+                <ul >
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Blog</li>
+                    <li>FAQ</li>
+                    <li>Contact Us</li>
+                </ul>
+                <ul>
+                    <li>Features</li>
+                    <li>Pricing</li>
+                    <li>Privacy Policy</li>
+                    <li>Terms of Service</li>
+                    <li>Help Center</li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <a href="#" class="social-icon"><img src="assets/icon-linkedin.png"</a>
+                <a href="#" class="social-icon"><img src="assets/icon-twitter.png"</a>
+                <a href="#" class="social-icon"><img src="assets/icon-facebook.png"</a>
+                <a href="#" class="social-icon"><img src="assets/icon-youtube.png"</a>
+            </div>
+       </div>
 
     </footer>
      
