--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav class=" navbar display-flex">
             <img src="assets/logo.png">
             <ul class=" nav-links display-flex  ">
-                <li class="nav-items font-weight"><a href="" class="nav-link"></a>Home</li>
-                <li class="nav-items font-color"><a href="" class="nav-link "></a>About us</li>
-                <li class="nav-items font-color"><a href="" class="nav-link "></a>Shop</li>
-                <li class="nav-items"><a href="" class="nav-link"></a> <i class='bx bx-cart'></i> Cart ($56)</li> 
+                <li class="nav-item nav-items font-weight" ><a href="" class="nav-link"></a>Home</li>
+                <li class="nav-item nav-items font-color"><a href="" class="nav-link "></a>About us</li>
+                <li class="nav-item nav-items font-color"><a href="" class="nav-link "></a>Shop</li>
+                <li class="nav-items"><a href="" class=""></a> <i class='bx bx-cart'></i> Cart ($56)</li> 
             </ul>
         </nav>
         <div class="banner display-flex">
